--- a/src/JForms/JFLogin.form
+++ b/src/JForms/JFLogin.form
@@ -71,7 +71,7 @@
                               <Component id="jPFContraseña" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                          <Component id="jLabel2" pref="411" max="32767" attributes="0"/>
+                          <Component id="jLabel2" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="65" pref="65" max="-2" attributes="0"/>
@@ -120,14 +120,14 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/botellachiqui.png"/>
+              <Image iconType="3" name="/Icons/botellachiqui.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/login.jpg"/>
+              <Image iconType="3" name="/Icons/login.jpg"/>
             </Property>
           </Properties>
         </Component>
